--- a/ADHD_Report.Rmd
+++ b/ADHD_Report.Rmd
@@ -4,193 +4,18 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE)
 ```
 
-## Logistic Regression Using SWAG
-
-```{r message=FALSE, warning=FALSE}
-## Loading the train dataset
-DATA <-  read.csv("train_data.csv")
-adhd0 <- t(DATA)
-adhd1 <- adhd0[-1, ]
-
-#naming the colnames
-colnames(adhd1) <- as.character(adhd1[1, ])
-X <- apply(adhd1[,-1],2, as.numeric)
-X <- data.frame(adhd1[ ,1],X)
-adhd2 <- X[-1, ]
-adhd3 <- as.matrix(adhd2)
-colnames(adhd3)[1] <- "GROUP"
-
-#defining control group=0  
-cat_v <- c()
-for (i in 1:dim(adhd3)[1]){
-  if(adhd3[ ,"GROUP"][i] == "Controls")
-  {
-    cat_v[i]<-"0"
-  }else{
-    cat_v[i]<-"1"
-  }
-}
-#as.factor(cat_v)
-adhd3 <- data.frame(cat_v, adhd3)
-Z <- adhd3[ ,-2]
-Z <- apply(Z,2,as.numeric)
-r <- Z[ ,1]
-r <- as.matrix(r)
-adhd <- Z[ ,-1]
-
-rm(list=c("adhd0", "adhd1", "adhd2", "adhd3", "Z"))
-```
-
-
-
-```{r message=FALSE, warning=FALSE}
-## Splitting the training dataset
-
-#training and testing data
-## % 80 of the sample size
-ind <- floor(0.8 * nrow(adhd))
-set.seed(2705)
-train_ind <- sample(seq_len(nrow(adhd)), size = ind)
-
-x_train <- as.data.frame(adhd[train_ind, ])
-y_train <- as.factor(r[train_ind, ])
-x_test <- as.data.frame(adhd[-train_ind, ])
-y_test <- as.factor(r[-train_ind, ])
-```
-
-
-```{r message=FALSE, warning=FALSE}
-## Loading the Original test dataset
-
-#test dataset
-
-DATA1 <-  read.csv("test_data.csv")
-ADHD0 <- t(DATA1)
-ADHD1 <- ADHD0[-1, ]
-
-#naming the colnames
-colnames(ADHD1) <- as.character(ADHD1[1, ])
-X_t <- apply(ADHD1[,-1],2, as.numeric)
-X_t <- data.frame(ADHD1[ ,1],X_t)
-ADHD2 <- X_t[-1, ]
-ADHD3 <- as.matrix(ADHD2)
-colnames(ADHD3)[1] <- "group"
-
-#defining control group=0  
-cat_t <- c()
-for (i in 1:dim(ADHD3)[1]){
-  if(ADHD3[ ,"group"][i] == "Controls")
-  {
-    cat_t[i]<-"0"
-  }else{
-    cat_t[i]<-"1"
-  }
-}
-ADHD3 <- data.frame(cat_t, ADHD3)
-Y<- ADHD3[ ,-2]
-Y <- apply(Y,2,as.numeric)
-colnames(Y)[1] <- "Group_t"
-
-rm(list=c("ADHD0", "ADHD1", "ADHD2", "ADHD3"))
-```
-
-
-
-```{r message=FALSE, warning=FALSE}
-## Loading the SWAG Logistic Regression results
-load("ADHD_package.Rda")
-```
-
-
-```{r message=FALSE, warning=FALSE}
-## Post-processing
-min_error = min(train_swag_svml$cv_alpha)
-
-
-varmat_ind = list() #saves the varmat index from CV errors
-for(i in 1:20){
-  varmat_ind[[i]]=which(train_swag_svml$CVs[[i]]<=min_error, arr.ind = T)
-}
-
-post_sel = list() # models selected after post-processing
-for(i in 1:20){
-  post_sel[[i]] = train_swag_svml$VarMat[[i]][,varmat_ind[[i]]]
-}
-
-post_sel[[1]] = t(as.matrix(post_sel[[1]]))
-
-for(i in 1:20){
-  if(!is.matrix(post_sel[[i]])){
-    post_sel[[i]]=t(as.matrix(post_sel[[i]]))
-  }
-}
-
-post_sel[[9]] = t(post_sel[[9]])
-
-
-x = c() #non-empty elements of post-group
-for(i in 1:20){
-  if(length(post_sel[[i]])!=0){
-    x = c(x,i)
-  }
-  x = x
-}
-
-for(i in 1:length(x)){
-  if(nrow(post_sel[[x[i]]])<20){
-    diff = 20 - nrow(post_sel[[x[i]]])
-    post_sel[[x[i]]] = rbind(post_sel[[x[i]]],matrix(NA,nrow = diff, ncol = ncol(post_sel[[x[i]]])))
-  } 
-}
-
-
-models = matrix(NA, nrow = 20,ncol=ncol(post_sel[[x[1]]]))
-
-models[1:nrow(post_sel[[x[1]]]),]=post_sel[[x[1]]]
-
-for(i in 2:length(x)){
-  models = cbind(models,post_sel[[x[i]]])
-}
-
-models = t(models)
-
-selected_var = c() 
-for(i in 1:ncol(models)){
-  selected_var = c(selected_var,models[,i])
-}
-selected_var = na.omit(unique(selected_var))
-selected_var = sort(selected_var)
-#colnames(x_train)[selected_var]
-#table(models)
-
-freq = table(models)
-variable = colnames(x_train)[selected_var]
-
-freq_table = cbind(variable,freq)
-rownames(freq_table) = c(1:nrow(freq_table))
-freq_table = as.data.frame(freq_table)
-freq_table$freq = as.numeric(freq_table$freq)
-
-#freq_table
-```
-
-
-```{r message=FALSE, warning=FALSE}
-require(plotrix)
-
-m_vector <- sapply(train_swag_svml$CVs, function(x) summary(x)[4])
-
-l_vector <- sapply(train_swag_svml$CVs, function(x) summary(x)[1])
-
-u_vector <- sapply(train_swag_svml$CVs, function(x) summary(x)[6])
-
-plotCI(1:length(train_swag_svml$CVs), m_vector, ui=u_vector, li=l_vector, scol = "grey", col="red", pch = 16, main = "Ranges 10-fold CV Misclassification Errors",ylab = "Range CV Error",xlab = "Model Size")
-```
+## Logistic Regression using SWAG
 
 The plot shows the range of CV errors for each dimension. There is a clear decay in CV errors as the dimension increases.
+
+```{r}
+library(png)
+img1_path <- "images/CV-plot-LogReg.png"
+img1 <- readPNG(img1_path, native = TRUE)
+```
 
 
 \begin{table}
@@ -308,102 +133,19 @@ Frontal-Sup-R'$\leftrightarrow$ 'ParahippocampaGyrus' & 72.11 &	363\\
 \end{tabular}
 \end{table}
 
-There are a total of 381 models of dimensions 9 to 20. The table below shows the frequency of each feature selected. The most frequent features are 'Insula_R' \(\leftrightarrow\) 'Paracentral-Lobule-R', 'Frontal-Sup-R' \(\leftrightarrow\) 'Frontal-Mid-R', 'Temporal-Mid-L' \(\leftrightarrow\) 'Lingual-L' and 'Insula-L' \(\leftrightarrow\) 'Frontal-Mid-L',  which are contained by every model.
+There are a total of 381 models of dimensions 9 to 20. The table below shows the frequency of each feature selected. The most frequent features are 'Insula-R' \(\leftrightarrow\) 'Paracentral-Lobule-R', 'Frontal-Sup-R' \(\leftrightarrow\) 'Frontal-Mid-R', 'Temporal-Mid-L' \(\leftrightarrow\) 'Lingual-L' and 'Insula-L' \(\leftrightarrow\) 'Frontal-Mid-L',  which are contained by every model.
 
 \newpage
 
-
-```{r message=FALSE, warning=FALSE}
-## Loading the SWAG SVM Linear results
-load("SVMLinear_Results.Rda")
-```
-
-```{r message=FALSE, warning=FALSE}
-## Post-processing
-min_error = min(train_swag_svml$cv_alpha)
-
-
-varmat_ind = list() #saves the varmat index from CV errors
-for(i in 1:20){
-  varmat_ind[[i]]=which(train_swag_svml$CVs[[i]]<=min_error, arr.ind = T)
-}
-
-post_sel = list() # models selected after post-processing
-for(i in 1:20){
-  post_sel[[i]] = train_swag_svml$VarMat[[i]][,varmat_ind[[i]]]
-}
-
-post_sel[[1]] = t(as.matrix(post_sel[[1]]))
-
-for(i in 1:20){
-  if(!is.matrix(post_sel[[i]])){
-    post_sel[[i]]=t(as.matrix(post_sel[[i]]))
-  }
-}
-
-post_sel[[9]] = t(post_sel[[9]])
-
-
-x = c() #non-empty elements of post-group
-for(i in 1:20){
-  if(length(post_sel[[i]])!=0){
-    x = c(x,i)
-  }
-  x = x
-}
-
-for(i in 1:length(x)){
-  if(nrow(post_sel[[x[i]]])<20){
-    diff = 20 - nrow(post_sel[[x[i]]])
-    post_sel[[x[i]]] = rbind(post_sel[[x[i]]],matrix(NA,nrow = diff, ncol = ncol(post_sel[[x[i]]])))
-  } 
-}
-
-
-models = matrix(NA, nrow = 20,ncol=ncol(post_sel[[x[1]]]))
-
-models[1:nrow(post_sel[[x[1]]]),]=post_sel[[x[1]]]
-
-for(i in 2:length(x)){
-  models = cbind(models,post_sel[[x[i]]])
-}
-
-models = t(models)
-
-selected_var = c() 
-for(i in 1:ncol(models)){
-  selected_var = c(selected_var,models[,i])
-}
-selected_var = na.omit(unique(selected_var))
-selected_var = sort(selected_var)
-#colnames(x_train)[selected_var]
-#table(models)
-
-freq = table(models)
-variable = colnames(x_train)[selected_var]
-
-freq_table = cbind(variable,freq)
-rownames(freq_table) = c(1:nrow(freq_table))
-freq_table = as.data.frame(freq_table)
-freq_table$freq = as.numeric(freq_table$freq)
-
-#freq_table
-```
-
-
-```{r message=FALSE, warning=FALSE}
-require(plotrix)
-
-m_vector <- sapply(train_swag_svml$CVs, function(x) summary(x)[4])
-
-l_vector <- sapply(train_swag_svml$CVs, function(x) summary(x)[1])
-
-u_vector <- sapply(train_swag_svml$CVs, function(x) summary(x)[6])
-
-plotCI(1:length(train_swag_svml$CVs), m_vector, ui=u_vector, li=l_vector, scol = "grey", col="red", pch = 16, main = "Ranges 10-fold CV Misclassification Errors",ylab = "Range CV Error",xlab = "Model Size")
-```
+## SVM Linear Analysis using SWAG
 
 The plot shows the range of CV errors for each dimension.
+
+```{r}
+library(png)
+img2_path <- "images/CV-plot-SVML.png"
+img2 <- readPNG(img2_path, native = TRUE)
+```
 
 ## FREQUENCY TABLE
 
@@ -522,6 +264,15 @@ Feature & Variable & Frequency \\
 \hline
 'Frontal-Mid-L'$\leftrightarrow$'Frontal-Sup-Medial-L' & 108.10 & 4\\
 \hline
+\end{tabular}
+\end{table}
+
+
+\begin{table}
+\begin{tabular}[t]{||c|c|c||}
+\hline
+Feature & Variable & Frequency \\
+\hline \hline
 'Occipital-Sup-R'$\leftrightarrow$'Precuneus-R' & 137.9 &	4\\
 \hline
 'Frontal-Inf-Oper-R'$\leftrightarrow$'Cingulum-Mid-R' & 164.82 & 4\\
@@ -572,7 +323,7 @@ Feature & Variable & Frequency \\
 \hline
 'Cuneus-L'$\leftrightarrow$Putamen-L' & 24.6 & 1\\
 \hline
-'Insula_L'$\leftrightarrow$'Temporal_Mid_L' & 61.31 &	1\\
+'Insula-L'$\leftrightarrow$'Temporal-Mid-L' & 61.31 &	1\\
 \hline
 'Frontal-Mid-L'$\leftrightarrow$'Temporal-Inf-R'& 69.15 & 1\\
 \hline
@@ -592,47 +343,49 @@ Feature & Variable & Frequency \\
 \hline
 'Postcentral-R'$\leftrightarrow$'Insula-R' & 115.54 & 1\\
 \hline
-174,73 &	114\\
+'Insula-L'$\leftrightarrow$'Parietal-Sup-L' & 116.95 & 1\\
 \hline
-175,27 &	1\\
+'Frontal-Mid-Orb-L'$\leftrightarrow$'Cingulum-Mid-L' & 119.99 & 1\\
 \hline
-177,55 &	2\\
+'Frontal-Sup-Medial-L'$\leftrightarrow$'Frontal-Inf-Orb-R' & 124.34 & 1\\
 \hline
-177,65 &	2\\
+'Temporal-Sup-L'$\leftrightarrow$'Postcentral-R' & 135.55 & 1\\
 \hline
-179,47 &	2\\
+'Frontal-Med-Orb-R'$\leftrightarrow$'Angular-R' & 138.92 & 1\\
 \hline
-183,12 &	106\\
+'Supp-Motor-Area-L'$\leftrightarrow$'Frontal-Mid-R'& 139.20 & 1\\
 \hline
-183,21 &	1\\
+'Temporal-Pole-Sup-R'$\leftrightarrow$'Temporal-Mid-L' & 146.31 & 1\\
 \hline
-183,118 &	2\\
+'Temporal-Pole-Sup-R'$\leftrightarrow$'Frontal-Sup-Orb-L' & 146.78 &	1\\
 \hline
-185,34 &	24\\
+'SupraMarginal-L'$\leftrightarrow$'Frontal-Mid-Orb-L' & 147.33 & 1\\
 \hline
-185,62 &	1\\
+'Rolandic-Oper-L'$\leftrightarrow$'Cingulum-Ant-L' & 148.47 & 1\\
 \hline
-187,14 &	11\\
+'Rolandic-Oper-L'$\leftrightarrow$'Frontal-Mid-L' &148.89 & 1\\
 \hline
-187,60 &	1\\
+'Cerebelum-3-R'$\leftrightarrow$'Thalamus-R' & 160.62 & 1\\
 \hline
-188,35 &	5\\
+'Postcentral-L'$\leftrightarrow$'Postcentral-R' & 163.55 & 1\\
 \hline
-188,99 &	5\\
+'Precentral-L'$\leftrightarrow$'Cingulum-Ant-R' & 166.112 & 1\\
 \hline
-188,174 &	5\\
+'RectalGyrus'$\leftrightarrow$'Insula-L' & 168.116 &	1\\
 \hline
-189,8	& 22\\
+'Parietal-Inf-L'$\leftrightarrow$'Frontal-Mid-L' & 169.108	& 1\\
 \hline
-189,34 &	7\\
+'Occipital-Sup-L'$\leftrightarrow$'Occipital-Mid-R' & 171.59 & 1\\
 \hline
-189,64 &	5\\
+'Frontal-Inf-Orb-R'$\leftrightarrow$'Vermis-6' & 172.136 & 1\\
 \hline
-189,99 &	2\\
+'Fusiform-R'$\leftrightarrow$'Caudate-R' & 175.27 & 1\\
 \hline
-190,3	& 5\\
+'Parietal-Inf-L'$\leftrightarrow$'Paracentral-Lobule-R' & 183.21 & 1\\
 \hline
-190,127 &	10\\
+'Temporal-Pole-Sup-R'$\leftrightarrow$'Thalamus-R' & 185.62 &	1\\
+\hline
+'Temporal-Mid-L'$\leftrightarrow$'Temporal-Inf-L' & 187.60 &	1\\
 \hline
 \end{tabular}
 \end{table}
