--- a/Logistic_Regression_Report.Rmd
+++ b/Logistic_Regression_Report.Rmd
@@ -107,6 +107,7 @@ load("Logistic_Regression_Results.Rda")
 
 
 ```{r message=FALSE, warning=FALSE}
+library("writexl")
 ## Post-processing
 min_error = min(train_swag_svml$cv_alpha)
 
@@ -174,7 +175,8 @@ freq_table = cbind(variable,freq)
 rownames(freq_table) = c(1:nrow(freq_table))
 freq_table = as.data.frame(freq_table)
 freq_table$freq = as.numeric(freq_table$freq)
-
+as.data.frame(freq_table)
+write_xlsx(freq_table,"C:\\Users\\pnuka\\OneDrive\\Documents\\Fall 2022\\Research- Stat\\GitHub\\LogisticFT.xlsx")
 #freq_table
 ```
 
