--- a/SVM_Linear_Report.Rmd
+++ b/SVM_Linear_Report.Rmd
@@ -64,11 +64,12 @@ y_test <- as.factor(r[-train_ind, ])
 
 ```{r message=FALSE, warning=FALSE}
 ## Loading the SWAG SVM Linear results
-load("SVMLinear_Results.Rda")
+load("SVM_Linear_Results.Rda")
 ```
 
 ```{r message=FALSE, warning=FALSE}
 ## Post-processing
+library("writexl")
 min_error = min(train_swag_svml$cv_alpha)
 
 
@@ -135,7 +136,8 @@ freq_table = cbind(variable,freq)
 rownames(freq_table) = c(1:nrow(freq_table))
 freq_table = as.data.frame(freq_table)
 freq_table$freq = as.numeric(freq_table$freq)
-
+as.data.frame(freq_table)
+write_xlsx(freq_table,"C:\\Users\\pnuka\\OneDrive\\Documents\\Fall 2022\\Research- Stat\\GitHub\\SVMLinearFT.xlsx")
 #freq_table
 ```
 
